doc: fix a few small man page typos
For reasons that may become clear shortly, I was looking at the
libseccomp man pages and I noticed a few small typos ... here they are
in patch format, hopefully my mail program doesn't botch the white
space ...

Signed-off-by: Jake Edge <jake@lwn.net>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/doc/man/man3/seccomp_init.3
+++ b/doc/man/man3/seccomp_init.3
@@ -54,7 +54,7 @@ match any of the configured seccomp filter rules.
 .B SCMP_ACT_ERRNO(uint16_t errno)
 The process will receive a return value of
 .I errno
-when it calls a syscall that does not match any of the configure seccomp filter
+when it calls a syscall that does not match any of the configured seccomp filter
 rules.
 .TP
 .B SCMP_ACT_TRACE(uint16_t msg_num)
