--- a/doc/man/man3/seccomp_attr_set.3
+++ b/doc/man/man3/seccomp_attr_set.3
@@ -12,7 +12,7 @@ seccomp_attr_set, seccomp_attr_get \- Manage the seccomp filter attributes
 .B enum scmp_filter_attr;
 .sp
 .BI "int seccomp_attr_set(enum scmp_filter_attr " attr ", uint32_t " value ");"
-.BI "int seccomp_attr_get(enum scmp_filter_attr " attr ", uint32_t " value ");"
+.BI "int seccomp_attr_get(enum scmp_filter_attr " attr ", uint32_t *" value ");"
 .fi
 .//////////////////////////////////////////////////////////////////////////////
 .SH DESCRIPTION
