--- a/doc/man/man3/seccomp_export_bpf.3
+++ b/doc/man/man3/seccomp_export_bpf.3
@@ -1,30 +1,30 @@
-.TH "seccomp_gen_bpf" 3 "15 April 2012" "paul@paul-moore.com" "libseccomp Documentation"
+.TH "seccomp_export_bpf" 3 "15 April 2012" "paul@paul-moore.com" "libseccomp Documentation"
 .//////////////////////////////////////////////////////////////////////////////
 .SH NAME
 .//////////////////////////////////////////////////////////////////////////////
-seccomp_gen_bpf, seccomp_gen_pfc \- Output the seccomp filter
+seccomp_export_bpf, seccomp_export_pfc \- Export the seccomp filter
 .//////////////////////////////////////////////////////////////////////////////
 .SH SYNOPSIS
 .//////////////////////////////////////////////////////////////////////////////
 .nf
 .B #include <seccomp.h>
 .sp
-.BI "int seccomp_gen_bpf(int " fd ");"
-.BI "int seccomp_gen_pfc(int " fd ");"
+.BI "int seccomp_export_bpf(int " fd ");"
+.BI "int seccomp_export_pfc(int " fd ");"
 .fi
 .//////////////////////////////////////////////////////////////////////////////
 .SH DESCRIPTION
 .//////////////////////////////////////////////////////////////////////////////
 .P
 The
-.BR seccomp_gen_bpf ()
+.BR seccomp_export_bpf ()
 and
-.BR seccomp_gen_pfc ()
+.BR seccomp_export_pfc ()
 functions generate and output the current seccomp filter in either BPF (Berkley
 Packet Filter) or PFC (Pseudo Filter Code).  The output of
-.BR seccomp_gen_bpf ()
+.BR seccomp_export_bpf ()
 is suitable for loading into the kernel, while the output of
-.BR seccomp_gen_pfc ()
+.BR seccomp_export_pfc ()
 is human readable and is intended primarily as a debugging tool for developers
 using libseccomp.  Both functions write the filter to the
 .I fd
@@ -60,7 +60,7 @@ int main(int argc, char *argv[])
 		goto out;
 	}
 
-	rc = seccomp_gen_bpf(filter_fd);
+	rc = seccomp_export_bpf(filter_fd);
 	if (rc < 0) {
 		close(filter_fd);
 		goto out;
