--- a/doc/man/man3/seccomp_attr_set.3
+++ b/doc/man/man3/seccomp_attr_set.3
@@ -1,4 +1,4 @@
-.TH "seccomp_attr_set" 3 "16 April 2012" "paul@paul-moore.com" "libseccomp Documentation"
+.TH "seccomp_attr_set" 3 "25 July 2012" "paul@paul-moore.com" "libseccomp Documentation"
 .\" //////////////////////////////////////////////////////////////////////////
 .SH NAME
 .\" //////////////////////////////////////////////////////////////////////////
@@ -9,10 +9,13 @@ seccomp_attr_set, seccomp_attr_get \- Manage the seccomp filter attributes
 .nf
 .B #include <seccomp.h>
 .sp
+.B typedef void * scmp_filter_ctx;
 .B enum scmp_filter_attr;
 .sp
-.BI "int seccomp_attr_set(enum scmp_filter_attr " attr ", uint32_t " value ");"
-.BI "int seccomp_attr_get(enum scmp_filter_attr " attr ", uint32_t *" value ");"
+.BI "int seccomp_attr_set(scmp_filter_ctx " ctx ","
+.BI "                     enum scmp_filter_attr " attr ", uint32_t " value ");"
+.BI "int seccomp_attr_get(scmp_filter_ctx " ctx ","
+.BI "                     enum scmp_filter_attr " attr ", uint32_t *" value ");"
 .fi
 .\" //////////////////////////////////////////////////////////////////////////
 .SH DESCRIPTION
@@ -26,9 +29,14 @@ function fetches the filter attributes.  The seccomp filter attributes are
 tunable values that affect how the library behaves when generating and loading
 the seccomp filter into the kernel.  The attributes are reset to their default
 values whenever the filter is initialized or reset via
-.BR seccomp_filter_init ()
+.BR seccomp_filter_init (3)
 or
-.BR seccomp_filter_reset ().
+.BR seccomp_filter_reset (3).
+.P
+The filter context
+.I ctx
+is the value returned by the call to
+.BR seccomp_init (3).
 .P
 Valid
 .I attr
@@ -36,9 +44,9 @@ values are as follows:
 .TP
 .B SCMP_FLTATR_ACT_DEFAULT
 The default filter action as specified in the call to
-.BR seccomp_filter_init ()
+.BR seccomp_filter_init (3)
 or
-.BR seccomp_filter_reset ().
+.BR seccomp_filter_reset (3).
 This attribute is read-only.
 .TP
 .B SCMP_FLTATR_ACT_BADARCH
@@ -67,22 +75,23 @@ Returns zero on success, negative errno values on failure.
 
 int main(int argc, char *argv[])
 {
-	int rc;
+	int rc = -1;
+	scmp_filter_ctx ctx;
 
-	rc = seccomp_init(SCMP_ACT_ALLOW);
-	if (rc < 0)
+	ctx = seccomp_init(SCMP_ACT_ALLOW);
+	if (ctx == NULL)
 		goto out;
 
 	/* ... */
 
-	rc = seccomp_attr_set(SCMP_FLTATR_ACT_BADARCH, SCMP_ACT_TRAP);
+	rc = seccomp_attr_set(ctx, SCMP_FLTATR_ACT_BADARCH, SCMP_ACT_TRAP);
 	if (rc < 0)
 		goto out;
 
 	/* ... */
 
 out:
-	seccomp_release();
+	seccomp_release(ctx);
 	return -rc;
 }
 .fi
