--- a/doc/man/man3/seccomp_export_bpf.3
+++ b/doc/man/man3/seccomp_export_bpf.3
@@ -1,4 +1,4 @@
-.TH "seccomp_export_bpf" 3 "15 April 2012" "paul@paul-moore.com" "libseccomp Documentation"
+.TH "seccomp_export_bpf" 3 "25 July 2012" "paul@paul-moore.com" "libseccomp Documentation"
 .\" //////////////////////////////////////////////////////////////////////////
 .SH NAME
 .\" //////////////////////////////////////////////////////////////////////////
@@ -9,8 +9,10 @@ seccomp_export_bpf, seccomp_export_pfc \- Export the seccomp filter
 .nf
 .B #include <seccomp.h>
 .sp
-.BI "int seccomp_export_bpf(int " fd ");"
-.BI "int seccomp_export_pfc(int " fd ");"
+.B typedef void * scmp_filter_ctx;
+.sp
+.BI "int seccomp_export_bpf(const scmp_filter_ctx " ctx ", int " fd ");"
+.BI "int seccomp_export_pfc(const scmp_filter_ctx " ctx ", int " fd ");"
 .fi
 .\" //////////////////////////////////////////////////////////////////////////
 .SH DESCRIPTION
@@ -30,6 +32,11 @@ using libseccomp.  Both functions write the filter to the
 .I fd
 file descriptor.
 .P
+The filter context
+.I ctx
+is the value returned by the call to
+.BR seccomp_init (3).
+.P
 While the two output formats are guaranteed to be functionally equivalent for
 the given seccomp filter configuration, the filter instructions, and their
 ordering, are not guaranteed to be the same in both the BPF and PFC formats.
@@ -45,11 +52,12 @@ Returns zero on success, negative errno values on failure.
 
 int main(int argc, char *argv[])
 {
-	int rc;
+	int rc = -1;
+	scmp_filter_ctx ctx;
 	int filter_fd;
 
-	rc = seccomp_init(SCMP_ACT_KILL);
-	if (rc < 0)
+	ctx = seccomp_init(SCMP_ACT_KILL);
+	if (ctx == NULL)
 		goto out;
 
 	/* ... */
@@ -60,7 +68,7 @@ int main(int argc, char *argv[])
 		goto out;
 	}
 
-	rc = seccomp_export_bpf(filter_fd);
+	rc = seccomp_export_bpf(ctx, filter_fd);
 	if (rc < 0) {
 		close(filter_fd);
 		goto out;
@@ -70,7 +78,7 @@ int main(int argc, char *argv[])
 	/* ... */
 
 out:
-	seccomp_release();
+	seccomp_release(ctx);
 	return -rc;
 }
 .fi
