--- a/doc/man/man3/seccomp_release.3
+++ b/doc/man/man3/seccomp_release.3
@@ -1,4 +1,4 @@
-.TH "seccomp_release" 3 "5 April 2012" "paul@paul-moore.com" "libseccomp Documentation"
+.TH "seccomp_release" 3 "25 July 2012" "paul@paul-moore.com" "libseccomp Documentation"
 .\" //////////////////////////////////////////////////////////////////////////
 .SH NAME
 .\" //////////////////////////////////////////////////////////////////////////
@@ -9,17 +9,21 @@ seccomp_release \- Release the seccomp filter state
 .nf
 .B #include <seccomp.h>
 .sp
-.BI "void seccomp_release(void);"
+.B typedef void * scmp_filter_ctx;
+.sp
+.BI "void seccomp_release(scmp_filter_ctx " ctx ");"
 .fi
 .\" //////////////////////////////////////////////////////////////////////////
 .SH DESCRIPTION
 .\" //////////////////////////////////////////////////////////////////////////
 .P
-Releases the internal seccomp filter state initialized by
+Releases the seccomp filter in
+.I ctx
+which was first initialized by
 .BR seccomp_init (3)
 or
 .BR seccomp_reset (3)
-and frees any memory associated with the currently configured seccomp filter.
+and frees any memory associated with the given seccomp filter context.
 Any seccomp filters loaded into the kernel are not affected.
 .\" //////////////////////////////////////////////////////////////////////////
 .SH RETURN VALUE
@@ -34,14 +38,15 @@ Does not return a value.
 int main(int argc, char *argv[])
 {
 	int rc;
+	scmp_filter_ctx ctx;
 
-	rc = seccomp_init(SCMP_ACT_KILL);
-	if (rc < 0)
-		return -rc;
+	ctx = seccomp_init(SCMP_ACT_KILL);
+	if (ctx == NULL)
+		return -1;
 
 	/* ... */
 
-	seccomp_release();
+	seccomp_release(ctx);
 	return 0;
 }
 .fi
