build: enable verbose building
This patch, along with some general Makefile cleanups, adds the
ability to display verbose build information if desired.  To perform
a verbose build, simple add "V=1" to the make command line as shown
below:

	# make V=1

The default remains the same, builds will be "quiet".

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/README
+++ b/README
@@ -21,7 +21,7 @@ In order to build the library you should follow the familiar three step
 process used by most applications:
 
 	# ./configure
-	# make
+	# make [V=0|1]
 	# make install
 
 As usual, running "./configure -h" will display a list of build-time
