doc: add linking note to manpage synopsis
To match other manpages that require libraries at link time, add a
single line naming the required library.

Signed-off-by: Kees Cook <keescook@chromium.org>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/doc/man/man3/seccomp_attr_set.3
+++ b/doc/man/man3/seccomp_attr_set.3
@@ -16,6 +16,8 @@ seccomp_attr_set, seccomp_attr_get \- Manage the seccomp filter attributes
 .BI "                     enum scmp_filter_attr " attr ", uint32_t " value ");"
 .BI "int seccomp_attr_get(scmp_filter_ctx " ctx ","
 .BI "                     enum scmp_filter_attr " attr ", uint32_t *" value ");"
+.sp
+Link with \fI\-lseccomp\fP.
 .fi
 .\" //////////////////////////////////////////////////////////////////////////
 .SH DESCRIPTION
