--- a/doc/man/man3/seccomp_load.3
+++ b/doc/man/man3/seccomp_load.3
@@ -12,6 +12,8 @@ seccomp_load \- Load the current seccomp filter into the kernel
 .B typedef void * scmp_filter_ctx;
 .sp
 .BI "int seccomp_load(scmp_filter_ctx " ctx ");"
+.sp
+Link with \fI\-lseccomp\fP.
 .fi
 .\" //////////////////////////////////////////////////////////////////////////
 .SH DESCRIPTION
