--- a/doc/man/man3/seccomp_syscall_priority.3
+++ b/doc/man/man3/seccomp_syscall_priority.3
@@ -15,6 +15,8 @@ seccomp_syscall_priority \- Prioritize syscalls in the seccomp filter
 .sp
 .BI "int seccomp_syscall_priority(scmp_filter_ctx " ctx ","
 .BI "                             int " syscall ", uint8_t " priority ");"
+.sp
+Link with \fI\-lseccomp\fP.
 .fi
 .\" //////////////////////////////////////////////////////////////////////////
 .SH DESCRIPTION
