--- a/doc/man/man3/seccomp_syscall_priority.3
+++ b/doc/man/man3/seccomp_syscall_priority.3
@@ -68,7 +68,7 @@ value in
 
 int main(int argc, char *argv[])
 {
-	int rc = -1;
+	int rc = \-1;
 	scmp_filter_ctx ctx;
 
 	ctx = seccomp_init(SCMP_ACT_KILL);
@@ -85,7 +85,7 @@ int main(int argc, char *argv[])
 
 out:
 	seccomp_release(ctx);
-	return -rc;
+	return \-rc;
 }
 .fi
 .\" //////////////////////////////////////////////////////////////////////////
