--- a/doc/man/man3/seccomp_syscall_resolve_name.3
+++ b/doc/man/man3/seccomp_syscall_resolve_name.3
@@ -1,4 +1,4 @@
-.TH "seccomp_syscall_resolve_name" 3 "16 August 2012" "paul@paul-moore.com" "libseccomp Documentation"
+.TH "seccomp_syscall_resolve_name" 3 "7 January 2013" "paul@paul-moore.com" "libseccomp Documentation"
 .\" //////////////////////////////////////////////////////////////////////////
 .SH NAME
 .\" //////////////////////////////////////////////////////////////////////////
@@ -10,6 +10,9 @@ seccomp_syscall_resolve_name \- Resolve a syscall name
 .B #include <seccomp.h>
 .sp
 .BI "int seccomp_syscall_resolve_name(const char *" name ");"
+.BI "int seccomp_syscall_resolve_name_arch(uint32_t " arch_token ","
+.BI "                                      const char *" name ");"
+.BI "char *seccomp_syscall_resolve_num_arch(uint32_t " arch_token ", int " num ");"
 .sp
 Link with \fI\-lseccomp\fP.
 .fi
@@ -19,23 +22,39 @@ Link with \fI\-lseccomp\fP.
 .P
 The
 .BR seccomp_syscall_resolve_name ()
-function resolves the commonly used syscall name to the syscall number used by
-the kernel and the rest of the libseccomp API.
+and
+.BR seccomp_syscall_resolve_name_arch()
+functions resolve the commonly used syscall name to the syscall number used by
+the kernel and the rest of the libseccomp API.  The
+.BR seccomp_syscall_resolve_num_arch()
+function resolves the syscall number used by the kernel to the commonly used
+syscall name.
+.P
+The caller is responsible for freeing the returned string from
+.BR seccomp_syscall_resolve_num_arch() .
 .\" //////////////////////////////////////////////////////////////////////////
 .SH RETURN VALUE
 .\" //////////////////////////////////////////////////////////////////////////
 .P
-The associated syscall number is returned, with the negative pseudo syscall
+In the case of
+.BR seccomp_syscall_resolve_name ()
+and
+.BR seccomp_syscall_resolve_name_arch()
+the associated syscall number is returned, with the negative pseudo syscall
 number being returned in cases where the given syscall does not exist for the
 architeture.  The value
 .BR __NR_SCMP_ERROR
-is returned in case of error.
-.P
-In all cases, the return value is suitable for use in any libseccomp API
-function which requires the syscall number, examples include
+is returned in case of error.  In all cases, the return value is suitable for
+use in any libseccomp API function which requires the syscall number, examples include
 .BR seccomp_rule_add ()
 and
 .BR seccomp_rule_add_exact ().
+.P
+In the case of
+.BR seccomp_syscall_resolve_num_arch()
+the associated syscall name is returned and it remains the callers
+responsibility to free the returned string via
+.BR free (3).
 .\" //////////////////////////////////////////////////////////////////////////
 .SH EXAMPLES
 .\" //////////////////////////////////////////////////////////////////////////
