doc: update the CHANGELOG
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,18 @@ libseccomp: Releases
 ===============================================================================
 http://libseccomp.sf.net
 
+* Version X.X.X - XXX
+- Fixes for the x86 multiplexed syscalls
+- Additions to the API to better support non-native architecures
+- Additions to the API to support multiple architecures in one filter
+- Additions to the API to resolve syscall name/number mappings
+- Assorted minor bug fixes
+- Improved build messages regardless of build verbosity
+- More automated tests added as well as a number of improvements to the test
+  harness
+- Experimental Python bindings added using Cython; the Python API is still
+  unstable and subject to change in future versions
+
 * Version 1.0.1 - November 12, 2012
 - The header file is now easier to use with C++ compilers
 - Minor documentation fixes
