--- a/doc/man/man3/seccomp_syscall_priority.3
+++ b/doc/man/man3/seccomp_syscall_priority.3
@@ -42,7 +42,7 @@ macro instead.  See the EXAMPLES section below.
 .P
 The
 .I priority
-parameter takes an 8-bit value ranging from 0 - 255; a higher value represents
+parameter takes an 8-bit value ranging from 0 \- 255; a higher value represents
 a higher priority.
 .P
 The filter context
