--- a/doc/man/man3/seccomp_arch_add.3
+++ b/doc/man/man3/seccomp_arch_add.3
@@ -68,7 +68,7 @@ and
 .BR seccomp_arch_remove ()
 functions return zero on success, negative errno values on failure.  The
 .BR seccomp_arch_exist ()
-function returns zero if the architecture exists, -EEXIST if it does not, and
+function returns zero if the architecture exists, \-EEXIST if it does not, and
 other negative errno values on failure.
 .\" //////////////////////////////////////////////////////////////////////////
 .SH EXAMPLES
@@ -78,14 +78,14 @@ other negative errno values on failure.
 
 int main(int argc, char *argv[])
 {
-	int rc = -1;
+	int rc = \-1;
 	scmp_filter_ctx ctx;
 
 	ctx = seccomp_init(SCMP_ACT_KILL);
 	if (ctx == NULL)
 		goto out;
 
-	if (seccomp_arch_exist(ctx, SCMP_ARCH_X86) == -EEXIST) {
+	if (seccomp_arch_exist(ctx, SCMP_ARCH_X86) == \-EEXIST) {
 		rc = seccomp_arch_add(ctx, SCMP_ARCH_X86);
 		if (rc != 0)
 			goto out_all;
@@ -98,7 +98,7 @@ int main(int argc, char *argv[])
 
 out:
 	seccomp_release(ctx);
-	return -rc;
+	return \-rc;
 }
 .fi
 .\" //////////////////////////////////////////////////////////////////////////
