--- a/doc/man/man3/seccomp_load.3
+++ b/doc/man/man3/seccomp_load.3
@@ -35,7 +35,7 @@ Returns zero on success, negative errno values on failure.
 
 int main(int argc, char *argv[])
 {
-	int rc = -1;
+	int rc = \-1;
 	scmp_filter_ctx ctx;
 
 	ctx = seccomp_init(SCMP_ACT_KILL);
@@ -52,7 +52,7 @@ int main(int argc, char *argv[])
 
 out:
 	seccomp_release(ctx);
-	return -rc;
+	return \-rc;
 }
 .fi
 .\" //////////////////////////////////////////////////////////////////////////
