doc: fix typo in scmp_sys_resolver.1
Fixes tiny spelling mistake in scmp_sys_resolver.1.

Signed-off-by: Kees Cook <keescook@chromium.org>
Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/doc/man/man1/scmp_sys_resolver.1
+++ b/doc/man/man1/scmp_sys_resolver.1
@@ -37,7 +37,7 @@ The architecture to use for resolving the system call.  Valid
 values are "x86", "x86_64", "x32", and "arm".
 .TP
 .B \-t
-If neccessary, translate the system call name to the proper system call number,
+If necessary, translate the system call name to the proper system call number,
 even if the system call name is different, e.g. socket(2) on x86.
 .TP
 .B \-h
