api: add an API to do translated/rewriten syscall resolution
This patch also converts the seccomp.resolve_syscall() method to use
the new resolution API.

Signed-off-by: Paul Moore <pmoore@redhat.com>

--- a/doc/man/man3/seccomp_syscall_resolve_name.3
+++ b/doc/man/man3/seccomp_syscall_resolve_name.3
@@ -1,4 +1,4 @@
-.TH "seccomp_syscall_resolve_name" 3 "7 January 2013" "paul@paul-moore.com" "libseccomp Documentation"
+.TH "seccomp_syscall_resolve_name" 3 "8 May 2014" "paul@paul-moore.com" "libseccomp Documentation"
 .\" //////////////////////////////////////////////////////////////////////////
 .SH NAME
 .\" //////////////////////////////////////////////////////////////////////////
@@ -12,6 +12,8 @@ seccomp_syscall_resolve_name \- Resolve a syscall name
 .BI "int seccomp_syscall_resolve_name(const char *" name ");"
 .BI "int seccomp_syscall_resolve_name_arch(uint32_t " arch_token ","
 .BI "                                      const char *" name ");"
+.BI "int seccomp_syscall_resolve_name_rewrite_arch(uint32_t " arch_token ","
+.BI "                                              const char *" name ");"
 .BI "char *seccomp_syscall_resolve_num_arch(uint32_t " arch_token ", int " num ");"
 .sp
 Link with \fI\-lseccomp\fP.
@@ -21,11 +23,14 @@ Link with \fI\-lseccomp\fP.
 .\" //////////////////////////////////////////////////////////////////////////
 .P
 The
-.BR seccomp_syscall_resolve_name ()
+.BR seccomp_syscall_resolve_name() ,
+.BR seccomp_syscall_resolve_name_arch() ,
 and
-.BR seccomp_syscall_resolve_name_arch()
+.BR seccomp_syscall_resolve_name_rewrite_arch()
 functions resolve the commonly used syscall name to the syscall number used by
-the kernel and the rest of the libseccomp API.  The
+the kernel and the rest of the libseccomp API, with
+.BR seccomp_syscall_resolve_name_rewrite_arch()
+rewriting the syscall number for architectures that modify the syscall.  The
 .BR seccomp_syscall_resolve_num_arch()
 function resolves the syscall number used by the kernel to the commonly used
 syscall name.
@@ -37,9 +42,10 @@ The caller is responsible for freeing the returned string from
 .\" //////////////////////////////////////////////////////////////////////////
 .P
 In the case of
-.BR seccomp_syscall_resolve_name ()
+.BR seccomp_syscall_resolve_name() ,
+.BR seccomp_syscall_resolve_name_arch() ,
 and
-.BR seccomp_syscall_resolve_name_arch()
+.BR seccomp_syscall_resolve_name_rewrite_arch()
 the associated syscall number is returned, with the negative pseudo syscall
 number being returned in cases where the given syscall does not exist for the
 architecture.  The value
